# print-color-preflight

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  MANIFEST.in  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: ARCHITECTURE.md  CLI.md  COLOR-WORKFLOW.md
examples/: make_sample_pdf.py
src/print_color_preflight/: __init__.py  cli.py  ghostscript.py  ink.py  models.py  pdf.py  profiles.py  report.py
tests/: conftest.py  test_cli.py  test_ghostscript.py  test_ink.py  test_integration.py  test_pdf.py  test_profiles.py  test_report.py
